# mammoth

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.py  cibuildwheel.toml  noxfile.py  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  deploy-cpp.yml  wheels-cpp.yml
analysis/rhicHadronSpectra/: jetscape_user_PP19.xml
cmake/: FindFastJet.cmake
docs/: FAQ.md  README.md  conf.py  developing_an_analysis.md  index.md  jet_substructure_skim.md  running_an_analysis.md  unfolding_notes.md
include/mammoth/: aliceFastSim.hpp  jetFinding.hpp
jetscape-an/: parse_ascii.py
jetscape_an/: base.py  hadron_spectra.py  jet_analysis.py  parse_ascii.py  phys_analysis.py  test_compression.py  test_parsing_performance.py
mammoth/: _ext.pyi  analysis_base.py  base.py  eic_qt.py  hadron_spectra.py  helpers.py  jet_analysis.py  job_utils.py  parse_ascii.py  phys_analysis.py  plot_eic.py  plot_scaling.py  test_compression.py
mammoth-cpp/: .gitignore  CMakeLists.txt  LICENSE  pyproject.toml
mammoth-cpp/cmake/: DownloadBoostHistogram.cmake  FindFastJet.cmake
mammoth-cpp/include/mammoth/: aliceFastSim.hpp  analysisUtils.hpp  jetFinding.hpp  jetFindingTools.hpp
mammoth-cpp/src/libmammoth/: aliceFastSim.cxx  analysisUtils.cxx  jetFinding.cxx  jetFindingTools.cxx
mammoth-cpp/src/mammoth_cpp/: _ext.pyi  logging.py
mammoth-cpp/src/python/: _ext.cxx
mammoth/alice/: helpers.py  jet_ML_background.py  run_jet_ML_analysis.py
mammoth/alice/config/: track_skim_config.yaml
mammoth/eic/: base.py  ecce_LGAD_layers_comparison.py  ecce_ReA.py  ecce_ReA_implementation.py  ecce_afterburner.py  ecce_track_comparison.py  eic_qt.py  plot_ecce_track_comparison.py  plot_eic.py  run_ecce_analysis.py
mammoth/framework/: analysis_tools.py  convert_HF_tree.py  jet_finding.cpp  jet_finding.py  load_data.py  logging_utils.py  models.py  particle_ID.py  production.py  sources.py  transform.py  typing.py  utils.py
mammoth/framework/analysis/: convert_HF_tree.py  convert_track_skim.py  hardest_kt.py  jet_substructure.py  jets.py  kt_pythia.py  objects.py  thermal_model.py
mammoth/framework/io/: HF_tree.py  jet_extractor.py  jetscape.py  track_skim.py
mammoth/framework/normalize_data/: HF_tree.py  jet_extractor.py  jetscape.py  jewel_from_laura.py  track_skim.py
mammoth/hardest_kt/: analysis_alice.py  analysis_track_skim_to_flat_tree.py  produce_flat_skim_from_track_skim.py  run_macro.py  run_produce_flat_skim_from_track_skim.py  skim_to_flat_tree.py  substructure_comparison_tools.py
mammoth/jetscape/: jet_raa.py  phys_analysis.py  plot_jetscape_RAA.py  run_jetscape_analysis.py  utils.py
mammoth/jetscape/stat_xsede_prep/: compare_to_RHIC_hadron_spectra.py  compression_performance.py  jet_analysis.py  plot_job_scaling.py  read_log_info.py
mammoth/src/: _ext.cxx  aliceFastSim.cxx  jetFinding.cxx  logging.py
projects/: .gitignore
projects/EECs/: exploration_mixed_events.py
projects/eic/: .gitignore
projects/eic/config/: DIS_template.cmnd  Jets_pythia8_eAu-10x100-q2-1-100.cfg  Jets_pythia8_eAu-10x100-q2-10.cfg  Jets_pythia8_eAu-10x100-q2-100.cfg  Jets_pythia8_eAu-18x275-q2-1-100.cfg  Jets_pythia8_eAu-18x275-q2-10.cfg  Jets_pythia8_eAu-18x275-q2-100.cfg  Jets_pythia8_ep-10x100-q2-1-100.cfg  Jets_pythia8_ep-10x100-q2-10.cfg  Jets_pythia8_ep-10x100-q2-100.cfg  Jets_pythia8_ep-18x275-q2-1-100.cfg  Jets_pythia8_ep-18x275-q2-10.cfg  Jets_pythia8_ep-18x275-q2-100.cfg  phpythia6_ep.cfg  phpythia6_ep_MinQ2_10.cfg  phpythia6_ep_MinQ2_20.cfg
projects/eic/event_count/: event_count.py
projects/eic/jet_finder/: jet_finder.cxx
projects/eic/lhapdf/: lhapdf_variations.py  testLHAPDF.cxx
projects/entanglement_entropy/: 2026-04-15-statistics-toy.py  2026-04-second-look-with-skim.py  first_look.py  measurement_toy.py
projects/examples/: two_panel_figure.py
projects/exploration/: .gitignore  check_rebinning.py  log_binning_madness.ipynb  repro_cannot_broadcast_nested_list.py  repro_numba.py  test_rich_progress_bar.py
projects/framework/: .gitignore
projects/framework/HFTreeConfiguration/: .gitignore  README.md
projects/framework/debug/: debug_outputs.ipynb
projects/framework/profiling/: .gitignore
projects/hardest_kt/: .gitignore  calculate_splittings.py  count_rejected_jets.py  spreadsheet_to_responses.py  update_citations.py
projects/hetgp/design_toy/: .gitignore  design_visualization.csv  plot_design_toy.py
projects/hetgp/predictions/: .gitignore  Hadron_HETGP_Prediction_by_bin.csv  Hadron_HFGP_Prediction_by_bin.csv  Hadron_LFGP_Prediction_by_bin.csv  Jet_HETGP_Prediction_by_bin.csv  Jet_HFGP_Prediction_by_bin.csv  Jet_LFGP_Prediction_by_bin.csv  plot_predictions.py
projects/hetgp/sensitivity/: .gitignore  plot_hadron_sensitivity.py  plot_jet_sensitivity.py  (+1 more)
projects/hybrid_model/: .gitignore  generate_run_info.py
projects/introductory/: .gitignore  jet_finding_exercise.py  jet_finding_exercise_solutions.py
projects/jetFinding/: README.md
projects/jet_background_ML/: extract_event_weight.py
projects/jetscape/: add_xsec_to_output_files.py  explore_parsing_performance.py  write_posterior_to_text.py
projects/time_reclustering/: steering.py
projects/track_skim/: steering.ipynb  steering.py
projects/website/: retrieve_truncated_authors_list.py
src/mammoth/: __init__.py  helpers.py  job_file_management.py  job_file_management_utils.py  job_utils.py
stat_estimate/: Dockerfile  run_configs_on_node.py  run_jetscape.sh
tests/: .gitignore  download_files_for_jetscape_parser.sh  download_files_for_track_skim_validation.sh  test_cpp_analysis_utils.py  test_eec_analysis_alice.py  test_framework_analysis_array_helpers.py  test_framework_analysis_objects.py  test_framework_io.py  test_framework_io_output_utils.py  test_jet_finding.py  test_jetscape_io.py  test_jetscape_parser.py  test_job_file_management.py  test_job_utils.py  test_load_data.py  test_package.py  test_sources.py  test_track_skim_validation.py  test_utils.py
tests/track_skim_validation/: .gitignore  track_skim_config.yaml
(+245 files in other folders)
